--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
       </div>
 
-      <hr />
+      <div class="hr"></div>
       <div class="author">
         <img src="./images/image-avatar.png" alt="photo" aria-hidden="true" />
 
