--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         </div>
       </div>
     </div>
-    <!-- <footer class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="https://github.com/SCREECH115">SCREECH115</a>.
-    </footer> -->
+    </footer>
   </body>
 </html>
